# axum_websockets

./: Cargo.toml  README.md
configuration/: base.yaml  local.yaml
scripts/: checks.sh
src/: configuration.rs  error.rs  lib.rs  main.rs  message.rs  startup.rs  telemetry.rs  websocket.rs
src/subsystems/: mod.rs  pc_usage.rs  python_repo.rs
src/websocket/: error.rs  message.rs  mod.rs  pc_usage.rs  route.rs
src/websocket_bkup/: python_repo.rs  subsystem.rs
tests/api/: heartbeat.rs  helpers.rs  main.rs  pc_usage.rs  python_repo.rs
tests/examples/: a.py
