[package]
name = "axum_websockets"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "axum_websockets"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.10"
serde_json = "1.0.64"
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.5"
tracing-log = "0.1.2"
glob = "0.3"
uuid = { version = "0.8.2", features = ["v4"] }
systemstat = "0.1.8"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.1", features = ["fs", "trace"] }
axum = { version = "0.2.5", features = ["ws", "headers"] }

[dev-dependencies]
awc = "3.0.0-beta.8"
once_cell = "1.7.2"
futures = "0.3"
